phantom-coerce/tests/ui/duplicate_to_attribute.stderr
error: Duplicate 'borrowed_to' attribute: only one target type allowed per #[coerce(...)] attribute
  --> tests/ui/duplicate_to_attribute.rs:11:82
   |
11 | #[coerce(borrowed_from = "Container<TypeA>", borrowed_to = "Container<Generic>", borrowed_to = "Container<TypeB>")]
   |                                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
